add smart home tile with smartthings integration

--- a/FamilyDashboard.Blazor/wwwroot/appsettings.json
+++ b/FamilyDashboard.Blazor/wwwroot/appsettings.json
@@ -1,5 +1,7 @@
 {
   "FamilyName": null,
   "Locale": null,
-  "GoogleCalendarEmbedCode": null
+  "GoogleCalendarEmbedCode": null,
+  "SmartThingsApiBaseAddress": null,
+  "SmartThingsApiAccessToken": null
 }
